<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>histograms</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>histograms</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>-verbose</arg>
                        <arg>--add-modules</arg>
                        <arg>jdk.hotspot.agent</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.tools=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.memory=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.oops=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.runtime=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.gc.shared=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.gc.parallel=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <!-- Build an executable JAR -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>org.example.OldGen</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-surefire-plugin</artifactId>-->
<!--                <version>3.0.0-M5</version>-->
<!--                <configuration>-->
<!--                    <argLine>-->
<!--                        -XX:+UnlockExperimentalVMOptions-->
<!--                        -XX:+EnableJVMCI-->
<!--                        &#45;&#45;add-exports=jdk.internal.vm.ci/jdk.vm.ci.services=${module.name}-->
<!--                        &#45;&#45;add-exports=jdk.internal.vm.compiler/org.graalvm.compiler.serviceprovider=${module.name}-->
<!--                        &#45;&#45;upgrade-module-path ${settings.localRepository}/org/graalvm/compiler/compiler/${graalvm.version}-->
<!--                    </argLine>-->
<!--                </configuration>-->
<!--            </plugin>-->
        </plugins>
    </build>

</project>
